pets-ui/src/globals.scss
body {
  padding: 0;
  margin: 0;
  font-family: "Inter UI", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

[tabindex="-1"] {
  outline: none;
}

input[type='file'].hide-text {
  @extend .govuk-file-upload !optional;
  font-size: 0;

  &::file-selector-button {
    font-size: 19px;
  }
}

.progress-tracker-header {
  display: flex;
  align-items: flex-start;
  margin-bottom: 20px;
}

.progress-tracker-header-content {
  flex-grow: 1;
}

.progress-tracker-photo-container {
  margin-left: 20px;
  border: 1px solid #b1b4b6;
  display: flex;
  align-items: stretch;
}

.progress-tracker-photo {
  display: block;
  height: 100%;
  max-height: 150px;
  width: auto;
  object-fit: cover;
}

.progress-tracker-lower-headings {
  padding-top: 10px;
  margin-bottom: 10px;
}

.progress-tracker-certificate-not-issued {
  max-width: none;
  white-space: nowrap;
}

.task-description-static {
  margin-bottom: 0;
}

.applicant-photo-summary {
  width: 100%;
  height: auto;
}

.certificate-reference-nowrap {
  .govuk-summary-list__row:first-child .govuk-summary-list__value {
    white-space: nowrap;
  }
}

.file-upload-existing-file {
  margin: 0;
}

.confirmation-panel {
  margin-bottom: 40px;
}


.confirmation-panel--warning {
  background-color: #d4351c;
  border: 5px solid #d4351c;
}


.confirmation-panel__title {
  color: white;
}


.confirmation-panel__body {
  color: white;
  font-size: 36px;
}


.confirmation-panel__reference-number {
  font-size: 36px;
}


.confirmation-action-button {
  margin-bottom: 20px;
}

.confirmation-secondary-button {
  margin-top: -50px;
}

.print-trigger {
  display: flex;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  font-size: 1.25rem;
  width: fit-content;
}

.certificate-image {
  padding-left: 4px;
  padding-right: 4px;
}

.footer-copyright-logo {
  display: inline-block;
  min-width: 125px;
  padding-top: 10px;
  background-position: 50% 0;
  background-size: 125px 102px;
  text-align: center;
  white-space: nowrap;
}

.footer-meta {
  width: 150px;
}

.file-upload-blue-bar {
  background: #b0d9fb;
  padding: 8px 12px;
}

.file-upload-no-file {
  color: #004886;
}

.file-upload-row {
  display: flex;
  align-items: center;
  gap: 8px;
}

.file-upload-hidden-input {
  display: none;
}

.file-upload-or-drop {
  color: #0b0c0c;
  font-size: 16px;
}

.govuk-radios__conditional {
  border-left: 4px solid #b1b4b6;
}

.govuk-radios__conditional--error {
  border-left: 4px solid #d4351c;
}

.dicom-upload-container {
  margin-bottom: -20px;

  button {
    margin-top: 0;
  }
}

.govuk-back-link {
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 0;
  margin-bottom: 0px;
}

.govuk-main-wrapper .govuk-button:not(.govuk-button-group .govuk-button) {
  margin-bottom: 20px;
}

.summary-list-value {
  text-align: right;
}

